Updating article template to used new edited_at parameter instead of updated_at

--- a/templates/article_page.html.hbs
+++ b/templates/article_page.html.hbs
@@ -44,10 +44,10 @@
             {{/link}}
 
             <ul class="meta-group">
-              {{#is article.created_at article.updated_at}}
+              {{#is article.created_at article.edited_at}}
                 <li class="meta-data">{{date article.created_at timeago=true}}</li>
               {{else}}
-                <li class="meta-data">{{date article.updated_at timeago=true}}</li>
+                <li class="meta-data">{{date article.edited_at timeago=true}}</li>
                 <li class="meta-data">{{t 'updated'}}</li>
               {{/is}}
             </ul>
