--- a/templates/home_page.hbs
+++ b/templates/home_page.hbs
@@ -1,5 +1,5 @@
 <section class="section hero">
-  <div class="hero-inner">
+  <div class="hero-inner hero-inner-{{settings.search_bar_position}}">
     {{search submit=false instant=settings.instant_search class='search search-full'}}
   </div>
 </section>
