--- a/style.css
+++ b/style.css
@@ -726,7 +726,31 @@ ul {
   top: 50%;
   transform: translateY(-50%);
   max-width: 610px;
+}
+
+.hero-inner-center {
+  top: 50%;
   margin: 0 auto;
+}
+
+.hero-inner-top-left {
+  top: 10%;
+  margin: 0 auto 0 0;
+}
+
+.hero-inner-top-right {
+  top: 10%;
+  margin: 0 0 0 auto;
+}
+
+.hero-inner-bottom-left {
+  top: 90%;
+  margin: 0 auto 0 0;
+}
+
+.hero-inner-bottom-right {
+  top: 90%;
+  margin: 0 0 0 auto;
 }
 
 .page-header {
