--- a/styles/index.scss
+++ b/styles/index.scss
@@ -35,4 +35,7 @@
 @import "metadata";
 @import "icons";
 @import "user-profiles";
-@import "search_results"
+@import "search_results";
+@import "lacey-monkey";
+@import "tile";
+@import "organicstart";
