--- a/templates/document_head.hbs
+++ b/templates/document_head.hbs
@@ -1,1 +1,35 @@
-<meta content="width=device-width, initial-scale=1.0" name="viewport" />
+<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" />
+
+<link
+    href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700|Varela+Round|Poppins:300,400,500,600,700|Roboto:300,400,500,700"
+    rel="stylesheet">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<!--?family=Raleway:400,500,600,700-->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+
+{{!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta.2/css/bootstrap.css"
+    integrity="sha384-D4uXGiV0A9/Qs6x3SL222p4SdrLx9Clo8ILGVQMoDDQ60FP2qozIG8TIvlq5itJW" crossorigin="anonymous"> --}}
+<!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mui/3.7.1/css/mui.min.css" integrity="sha384-bTFVkxX4P9AthiyPxehF/JY1ix4O2kHIqErMgBVTPuaNQhY9prpzUpK6bqgdLst2" crossorigin="anonymous">-->
+<link rel="stylesheet" href="{{asset 'semantic.min.css'}}?v=011020180318">
+
+<link rel="stylesheet" href="{{asset 'style.css'}}?v=012420180659">
+<link rel="stylesheet" href="{{asset 'rhythm.css'}}?v=011020180318">
+
+<link href="https://fonts.googleapis.com/css?family=Fredoka+One|Roboto:300,400,500,700,900|Varela+Round"
+    rel="stylesheet">
+<link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css"
+    integrity="sha384-7BsxsfeWMf+6PLS9uv6nG/A21nVX1jiRjZ+0D/Zz6lHOd5X4cIQJR1AnIhj4DD4B" crossorigin="anonymous">
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.css"
+    integrity="sha384-t4IGnnWtvYimgcRMiXD2ZD04g28Is9vYsVaHo5LcWWJkoQGmMwGg+QS0mYlhbVv3" crossorigin="anonymous">
+{{!-- <link rel="stylesheet" href="//cdn.shopify.com/s/files/1/1786/0257/t/7/assets/semantic.css?540"> --}}
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css"
+    integrity="sha384-eYUmD1FFkORGrJdmrD37Z5LUEElTzF32+UI3jkzt7C1vpmUGo5KOVvb3Z5LeZHky" crossorigin="anonymous">
+<link href="//cdn.shopify.com/s/files/1/1786/0257/t/7/assets/osw.css?540" rel="stylesheet" type="text/css"
+    media="all" />
+<link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css'
+    integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous'>
+</head>
