--- a/styles/_hero.scss
+++ b/styles/_hero.scss
@@ -1,16 +1,33 @@
 /***** Hero component *****/
 .hero {
-  background-image: url($homepage_background_image);
+  background: rgb(255,255,255);
+  background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 50%, rgba(193,31,155,0.25) 100%);
+  background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(255,255,255,1) 50%,rgba(193,31,155,0.25) 100%);
+  background: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(255,255,255,1) 50%,rgba(193,31,155,0.25) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#c11f9b',GradientType=0 );
+  
   background-position: center;
   background-size: cover;
-  height: 300px;
-  padding: 0 20px;
+  padding: 0;
   text-align: center;
   width: 100%;
 
   &-inner {
-    @include vertical-align;
-    max-width: 610px;
+    position: relative;
+    height: 100%;
+    width: 100%;
     margin: 0 auto;
+  }
+  & &-inner .container {
+    z-index: 99;
+    position: relative;
+    margin: 0 auto;
+    padding: 0;
+  }
+  & &-inner .container &-banner {
+    margin-bottom: -4rem;
+  }
+  & &-inner .container .row {
+    margin-bottom:-2.5rem;
   }
 }
