--- a/styles/_section.scss
+++ b/styles/_section.scss
@@ -1,56 +1,77 @@
 /***** Section pages *****/
 .section {
-  &-container {
-    display: flex;
-    justify-content: flex-end;
-  }
-
-  &-content {
-    @include desktop {
-      flex: 0 0 80%;
+    &-container {
+        display: flex;
+        justify-content: flex-end;
     }
-    flex: 1;
-  }
 
-  &-subscribe {
-    .dropdown-toggle::after {
-      display: none;
+    &-content {
+        @include desktop {
+            flex: 0 0 80%;
+        }
+
+        flex: 1;
     }
-  }
+
+    &-subscribe {
+        .dropdown-toggle::after {
+            display: none;
+        }
+    }
 }
 
 .section-list {
-  margin: 40px 0;
+    margin: 40px 0;
 }
 
 .section-list--collapsed .section-list-item:nth-child(1n + 6) {
-  display: none;
+    display: none;
 }
 
 .section-list-item {
-  border-bottom: 1px solid $border-color;
-  font-size: $font-size-bigger;
-  padding: 15px 0;
+    border-bottom: 1px solid $border-color;
+    font-size: $font-size-bigger;
+    padding: 15px 0;
 
-  &:first-child {
-    border-top: 1px solid $border-color;
-  }
+    &:first-child {
+        border-top: 1px solid $border-color;
+    }
 
-  a {
-    align-items: center;
-    color: $text_color;
-    display: flex;
-    justify-content: space-between;
-  }
+    a {
+        align-items: center;
+        color: $text_color;
+        display: flex;
+        justify-content: space-between;
+    }
 }
 
 .see-all-sections-trigger {
-  cursor: pointer;
-  display: block;
-  padding: 15px;
-  text-align: center;
+    cursor: pointer;
+    display: block;
+    padding: 15px;
+    text-align: center;
 
-  &[aria-hidden="true"] {
-    display: none;
+    &[aria-hidden="true"] {
+        display: none;
+    }
+}
+
+@media (min-width: 1024px) {
+    .section-content {
+        flex: 0 0 80%;
+    }
+}
+.section {
+  margin-bottom: 40px;
+}
+
+@media (min-width: 768px) {
+  .section {
+    margin-bottom: 60px;
   }
+}
+
+.section h2 {
+  margin-bottom: 10px;
+  text-align: center;
 }
